| Summary: | ASTERISK-26331: Crash on “core show channeltype Surrogate” in ast_format_cap_get_names | ||
| Reporter: | CGI.NET (nsnake) | Labels: | |
| Date Opened: | 2016-09-01 04:37:22 | Date Closed: | 2016-09-06 09:01:27 |
| Priority: | Critical | Regression? | |
| Status: | Closed/Complete | Components: | Core/Channels Core/General |
| Versions: | 13.7.2 13.10.0 13.11.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Centos6.5 | Attachments: | ( 0) backtrace.txt |
| Description: | When I exec command "core show channeltype Surrogate" in asterisk CLI, Asterisk is Crash and see below:
{noformat} Program terminated with signal 11, Segmentation fault. #0 0x0000000000525cdf in ast_format_cap_get_names () To enable execution of this file add add-auto-load-safe-path /usr/local/lib64/libstdc++.so.6.0.21-gdb.py line to your configuration file "/root/.gdbinit". To completely disable this security protection add set auto-load safe-path / line to your configuration file "/root/.gdbinit". For more information about this security protection see the "Auto-loading safe path" section in the GDB manual. E.g., run from the shell: info "(gdb)Auto-loading safe path" Missing separate debuginfos, use: <snip> [?1034h(gdb) bt #0 0x0000000000525cdf in ast_format_cap_get_names () #1 0x00000000004b1aaf in handle_cli_core_show_channeltype () #2 0x00000000004dd677 in ast_cli_command_full () #3 0x000000000045664e in consolehandler () #4 0x000000000045d524 in asterisk_daemon () #5 0x000000000045c35e in main () {noformat} I hae enabled MALLOC_DEBUG Compiler Flag and that the log with mmlog ``` [root@asterisk]# more mmlog 1472722488 - New session 1472722569 - New session ``` | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-09-01 04:37:23.697-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2016-09-01 08:07:34.613-0500 Thank you for the crash report. However, we need more information to investigate the crash. Please provide: 1. A backtrace generated from a core dump using the instructions provided on the Asterisk wiki [1]. 2. Specific steps taken that lead to the crash. 3. All configuration information necesary to reproduce the crash. Thanks! [1]: https://wiki.asterisk.org/wiki/display/AST/Getting+a+Backtrace By: CGI.NET (nsnake) 2016-09-02 02:26:00.518-0500 I add the more info in the backtrace.txt By: Rusty Newton (rnewton) 2016-09-02 08:02:47.440-0500 Thanks, and it turns out it is easy to reproduce, or at least I can reproduce it with the sample configs. | ||